ugly wireframe w basic game logic

--- a/index.html
+++ b/index.html
@@ -5,9 +5,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Hangman</title>
+  <link rel="stylesheet" href="style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js" charset="utf-8"></script>
 </head>
 <body>
+  <header></header>
+
+  <div id="main">
+    <nav>
+      <h1>
+      </h1>
+    </nav>
+    <div id="maincontainer">
+      <section>
+    This is the game section
+      <form id="answerform">
+        <input id="answer" autofocus placeholder="player one pick a word!">
+      </form>
+      </section>
+      <main>
+        <input id="guess" autofocus placeholder="player two what's your guess?">
+      </main>
+      <section>
+        2nd section
+      </section>
+      <section>
+        3rd section
+      </section>
+    </div>
+
+
+    <aside>
+
+
+  </aside>
+</div>
+
+  <footer>
+
+  </footer>
+
 
 <script src="script.js" charset="utf-8"></script>
 </body>
