bronze functionality commented out playerswitch

--- a/index.html
+++ b/index.html
@@ -9,16 +9,26 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js" charset="utf-8"></script>
 </head>
 <body>
-  <header></header>
+  <header>
+    <h1>Enhanced Interrogation Hangman</h1>
+
+  </header>
 
   <div id="main">
     <nav>
-      <h1>
-      </h1>
+      <div class="guesses">
+        <h2>Guessed Letters
+        </h2>
+      </div>
+      <div>
+        <h2>Scoreboard</h2>
+      </div>
+
+
+
     </nav>
     <div id="maincontainer">
       <section>
-    This is the game section
       <form id="answerform">
         <input id="answer" autofocus placeholder="player one pick a word!">
       </form>
@@ -27,10 +37,8 @@
         <input id="guess" autofocus placeholder="player two what's your guess?">
       </main>
       <section>
-        2nd section
       </section>
       <section>
-        3rd section
       </section>
     </div>
 
