--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
-  <!-- <script src="jquery-3.1.1.min.js" charset="utf-8"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js" charset="utf-8"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
 </head>
 <body>
   <header>
-    <h1>Enhanced Interrogation Hangman</h1>
+    <h1>Hangman</h1>
 
   </header>
 
